--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "core-js": "^2.5.4",
     "json-server": "^0.15.1",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26"
+    "zone.js": "~0.8.26",
+    "express":"*"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.12.3",
